# mkdocs_github_changelog

./: .gitignore  .pre-commit-config.yaml  .recipe-batch.yaml  LICENSE  README.md  index.html  noxfile.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  renovate.json
.github/workflows/: pipeline.yaml  pr-labeler.yaml  release-management.yaml
0.1.0/: 404.html  index.html  objects.inv
0.1.0/changelog/: index.html
0.1.0/coverage/: covindex.html  d_23fd4ba10b59841e___init___py.html  d_23fd4ba10b59841e__version_py.html  d_23fd4ba10b59841e_extension_py.html  d_23fd4ba10b59841e_get_releases_py.html  d_23fd4ba10b59841e_plugin_py.html  index.html  status.json
0.1.0/developing/: index.html
0.1.0/developing/license/: index.html
0.1.0/search/: search_index.json
docs/: mkdocs.yml
docs/source/: changelog.md  index.md  usage.md
docs/source/developing/: index.md  license.md  sbom.md
src/mkdocs_github_changelog/: __init__.py  extension.py  get_releases.py  plugin.py
tests/functional/: test_get_releases.py  test_plugin.py
tests/unit/: test_extension.py  test_get_releases.py  test_placeholder.py  test_plugin.py  test_processor.py
